# wh0revshell

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
cmake/toolchains/: mingw-w64.cmake
src/: wh0loader.cpp  wh0revshell.cpp
